my PreFinal Commit

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -4,12 +4,13 @@
     <h1>Add a New Student!!</h1>
 
     
-<button onclick="goBack()" class="btn btn-primary">Go Back</button>
-<script>
-  function goBack() {
-    window.history.back();
-  }
-  </script>
+
+    <button onclick="goBack()" class="btn btn-outline-primary"><img src="/materialicon/undo.png" alt=""> Go Back</button>
+      <script>
+        function goBack() {
+          window.history.back();
+        }
+        </script>
 
   <form action="/users/add" method="POST">
     <table class="table table1">
