--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,19 +4,22 @@
   <title>MECW</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="/style/styles.css">
 </head>
 <body>
 
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top ">
     <a class="navbar-brand" href="/dashboard">Dashboard</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -25,9 +28,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/users/index">Home <i class="material-icons">
-            home
-            </i> <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/users/index">Home <img src="/materialicon/home.png" alt="home"> <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/users/contact">Contact</a>
@@ -44,7 +45,7 @@
                   Computer Science & Engineering  <i class="material-icons">
                       laptop_mac
            </i>
-              </a>
+              </a><div class="dropdown dropright">
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">1st</a>
                 <a class="dropdown-item" href="#">2nd</a>
@@ -57,9 +58,10 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">PassOut</a>
               </div>
+            </div>
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Electronics & Communication Engineering
-              </a>
+              </a><div class="dropdown dropleft">
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">1st</a>
                 <a class="dropdown-item" href="#">2nd</a>
@@ -72,27 +74,78 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">PassOut</a>
               </div>
-            <a class="dropdown-item" href="#">ME <i class="material-icons">
+            </div>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Electrical & Electrionics Engineering</a>
+            <div class="dropdown dropright">
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">1st</a>
+                  <a class="dropdown-item" href="#">2nd</a>
+                  <a class="dropdown-item" href="#">3rd</a>
+                  <a class="dropdown-item" href="#">4th</a>
+                  <a class="dropdown-item" href="#">5th</a>
+                  <a class="dropdown-item" href="#">6th</a>
+                  <a class="dropdown-item" href="#">7th</a>
+                  <a class="dropdown-item" href="#">8th</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">PassOut</a>
+                </div>
+              </div>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Mechanical Engineering<i class="material-icons">
               train
               </i></a>
-            <a class="dropdown-item" href="#">EEE</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Others</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
+              <div class="dropdown dropleft">
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">1st</a>
+                    <a class="dropdown-item" href="#">2nd</a>
+                    <a class="dropdown-item" href="#">3rd</a>
+                    <a class="dropdown-item" href="#">4th</a>
+                    <a class="dropdown-item" href="#">5th</a>
+                    <a class="dropdown-item" href="#">6th</a>
+                    <a class="dropdown-item" href="#">7th</a>
+                    <a class="dropdown-item" href="#">8th</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">PassOut</a>
+                  </div>
+                </div>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Civil Engineering<i class="material-icons">
+                    train
+                  </i></a>
+                  <div class="dropdown dropright">
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="#">1st</a>
+                          <a class="dropdown-item" href="#">2nd</a>
+                          <a class="dropdown-item" href="#">3rd</a>
+                          <a class="dropdown-item" href="#">4th</a>
+                          <a class="dropdown-item" href="#">5th</a>
+                          <a class="dropdown-item" href="#">6th</a>
+                          <a class="dropdown-item" href="#">7th</a>
+                          <a class="dropdown-item" href="#">8th</a>
+                          <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="#">PassOut</a>
+                        </div>
+                      </div>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="#">Others</a>
+                    </div>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" data-toggle="collapse" data-target="#demo">BranchWise</a>
+                  </li>
+                </ul>
       <form  action="/users/student" method="POST"  class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" name="rgno" placeholder="Enter Registration No." aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search<i class="material-icons">
-          search
-          </i></button>
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search <img src="/materialicon/search.svg" alt=""></button>
       </form>
+      <a href="/users/logout" class="btn btn-outline-secondary">LogOut <%= user.name %></a>
     </div>
-    <a href="/users/logout" class="btn btn-secondary">LogOut <%= user.name %></a>
   </nav>
+
+  
+
+  <div id="demo" class="collapse">
   <div class="container nav-item dropdown">
     <div class="row">
       <div class="col-sm">
@@ -186,9 +239,10 @@
           <a class="dropdown-item" href="#">PassOut</a>
         </div>
        </div>
+       </div>
     </div>
   </div>
-
-
+<hr>
+<% include ./messages.ejs %>
 
 
