--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -10,3 +10,15 @@
 h1, h3{
   text-align: center;
 }
+
+body{
+  margin: 0;
+  padding: 0;
+}
+ul {
+list-style-type: none;
+}
+li{
+  
+  display: inline;
+}
