--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,4 +1,6 @@
 <% include partials/nav.ejs %>
 <h1 class="mt-4">Dashboard</h1>
+<marquee behavior="move" direction="left">Addmissions are Open For Session 2019-2020 | Practical Exams are Held in college from 1May-10May 2019</marquee>
+
 <p class="lead mb-3">Welcome <%= user.name %></p>
-<a href="/users/logout" class="btn btn-secondary">Logout</a>
+<img src="/collegePic/college.png" class="img-fluid" alt="Responsive-image" srcset="">
