--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,13 @@
 
     <% include ./partials/nav.ejs %>
+
+    
     <div class="container ">
         <a href="/users/add">
-          <button class="btn btn-primary btn-lg" type="button" href="/users/add">Add Student <i class="material-icons">
-            person_add
-            </i></button></a>
+          <button class="btn btn-outline-primary" type="button" href="/users/add">
+            <img src="/materialicon/add.png" alt="">
+            Student
+          </button></a>
 
             <button onclick="getLocation()" class="btn"><i class="material-icons">
                 room
@@ -12,6 +15,7 @@
 
 
 <p id="demo"></p>
+
 
 <script>
 var x = document.getElementById("demo");
@@ -28,6 +32,11 @@ function showPosition(position) {
 x.innerHTML = "Latitude: " + position.coords.latitude + 
 "<br>Longitude: " + position.coords.longitude;
 }
+
+$(document).ready(function() {
+    $('#table2').DataTable();
+} );
+
 </script>
 
             <div class="container">
@@ -45,9 +54,9 @@ x.innerHTML = "Latitude: " + position.coords.latitude +
               </div>
 
              
-
-        <table class="table table-sm table-striped">
-          <thead class="table-active thead-dark">
+<div class="table-responsive">
+        <table id="table2">
+          <thead>
             <tr>
               <th scope="col">Roll No.</th>
               <th scope="col">Name</th>
@@ -60,7 +69,7 @@ x.innerHTML = "Latitude: " + position.coords.latitude +
   </tr>
 </thead>
 <% students.forEach(function(students){ %>
-  <tbody class="tbody-light">
+  <tbody>
     <tr> <a href="/users/students/<%=students._id %>">
       <th scope="row"><%= students.rollno %></th>
       <td ><%= students.name %></td>
@@ -72,17 +81,16 @@ x.innerHTML = "Latitude: " + position.coords.latitude +
   <td>
     <ul class="action">
     <li>
-      <a href="/users/students/<%=students._id %>" class="btn btn-success">Details </a >
+      <a href="/users/students/<%=students._id %>" class="btn btn-outline-success"><img src="/materialicon/morev.svg" alt="">Details </a >
       </li>
       <li>
-        <a href="/users/index/<%=students._id %>" class="btn btn-info">Edit</a >
+        <a href="/users/index/<%=students._id %>" class="btn btn-outline-primary"><img src="/materialicon/edit.png" alt="">Edit</a >
         </li>
         <li>
-    <form id="delete" action="/users/index/<%= students._id%>?_method=DELETE" method="POST">
-      <button>DELETE<i class="material-icons">
-        delete
-      </i>
-    </button></form>
+    <form action="/users/index/<%= students._id%>?_method=DELETE" method="POST">
+      <button class="btn btn-outline-danger"><img src="/materialicon/delete.png" alt="">Delete
+    </button>
+  </form>
   </li>
 </ul>
 
@@ -91,10 +99,9 @@ x.innerHTML = "Latitude: " + position.coords.latitude +
 <%})%>
 </tbody>
 </table>
+
 </div>
-<a href="/users/add">
-  <button class="btn btn-primary btn-lg btn-block" type="button" href="/users/add">Add Student <i class="material-icons">
-    person_add
-    </i></button></a>
+</div>
+
 </body>
 </html>
