--- a/views/marks/perform.ejs
+++ b/views/marks/perform.ejs
@@ -7,6 +7,14 @@
 
 <h1>Performance Of <%= student.name %></h1>
 
+<button onclick="goBack()" class="btn btn-outline-warning"><i class="material-icons">
+    undo
+  </i> Go Back</button>
+  <script>
+    function goBack() {
+      window.history.back();
+    }
+    </script>
 
 
 <table class="table table-bordered " id="performance">
